[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = "Pre-commit Git hooks."
authors = [ "Vincenzo Stornanti",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vonvikken/pre-commit-hooks"
repository = "https://github.com/Vonvikken/pre-commit-hooks"
keywords = [ "pre-commit", "git", "python",]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
clean-requirements = "pre_commit_hooks.clean_requirements:main"
